include_directories(${CMAKE_CURRENT_SOURCE_DIR})
MACRO(SUBDIRLIST result curdir)
  FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
  SET(dirlist "")
  FOREACH(child ${children})
    IF(IS_DIRECTORY ${curdir}/${child})
      LIST(APPEND dirlist ${child})
    ENDIF()
  ENDFOREACH()
  SET(${result} ${dirlist})
ENDMACRO()
SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})

FOREACH(subdir ${SUBDIRS})
    file(GLOB sources ${subdir}/*.cpp ${subdir}/**/*.cpp ${subdir}/**/**/*.cpp)
    list(LENGTH sources sources_len)
    if(sources_len GREATER 0)
        add_library(${subdir}_lib STATIC ${sources})
    endif(sources_len GREATER 0)
ENDFOREACH()
