include_directories(${PROJECT_SOURCE_DIR}/3rdparty/gtest)
add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND})
add_custom_target(ut)

MACRO(SUBDIRLIST result curdir)
  FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
  SET(dirlist "")
  FOREACH(child ${children})
    IF(IS_DIRECTORY ${curdir}/${child})
      LIST(APPEND dirlist ${child})
    ENDIF()
  ENDFOREACH()
  SET(${result} ${dirlist})
ENDMACRO()
SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})

FOREACH(subdir ${SUBDIRS})
    set(test_name ${subdir}_test)
    set(test_sources "")
    file(GLOB test_sources ${subdir}/*.cpp ${subdir}/**/*.cpp ${subdir}/**/**.cpp)
    add_executable(${test_name} ${test_sources} $<TARGET_OBJECTS:gtest>)

    set(sources_lib_name ${subdir}_lib)
    target_link_libraries(${test_name} ${sources_lib_name} ${CMAKE_THREAD_LIBS_INIT})
    add_dependencies(ut ${test_name})

    add_test(NAME ${test_name} COMMAND ${test_name})
    set_tests_properties(${test_name} PROPERTIES LABELS UT)
ENDFOREACH()
include(CTest)
